--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	"dependencies": {
 		"cross-fetch": "^3.0.2",
 		"hyntax": "^1.1.9",
-		"infobox-parser": "github:mattvick/infobox-parser#master"
+		"infobox-parser": "3.6.2"
 	},
 	"devDependencies": {
 		"@pollyjs/adapter-node-http": "^2.5.0",
